--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,76 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.footer {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #eee;
+  justify-content: space-between;
+}
+
+.input {
+  display: flex;
+  justify-content: center;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 30px;  
+}
+
+.right-links1 {
+  margin-right: 30px;
+}
+
+.left-links1 {
+  margin-left: -10px;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(132, 132, 132);
+}
+
+.left-links1,
+.right-links1 {
+  display: flex;
+  gap: 10px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+
+.right-links {
+  margin-right: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 10px
+}
+
+.left-links {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-left: -10px;
+}
