--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,22 +8,79 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+}
+
+.sidebar ul {
+  text-align: start;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+   
 }
+
+.displayme {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+
+
+.card {
+  display: flex;
+  width: 300px;
+  border: black solid 3px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto 0 auto;
+  border: black solid 3px;
+  padding: 30px;
+  gap: 30px;
+
+}
+
+
+li,
+a {
+  list-style-type: none;
+  text-decoration: none;
+  color: white;
+}
+
